k8s/sites/journa/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        site: journa
    spec:
      containers:
        - name: frontend
          image: multi/journa-web:latest
