k8s/sites/journa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcorp-ingress
  namespace: gcorp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gcorp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
